# claude-subagent-system

./: .env.example  .gitignore  CLAUDE.md  INITIAL.md  README.md  pyproject.toml  requirements.txt  validate_implementation.py
PRPs/: advanced-gpu-cluster-manager.md  claude-subagent-system.md
gpu_cluster/: __init__.py
gpu_cluster/core/: config.py
gpu_cluster/hardware/: nvml_wrapper.py
gpu_cluster/scheduling/: scheduler_interface.py
gpu_cluster/utils/: error_handling.py  lock_free.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  discovery_agent.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  agent_models.py  context_models.py  integration_models.py  workflow_models.py
src/orchestrator/: __init__.py  agent_factory.py  context_manager.py  workflow_analyzer.py
src/utils/: __init__.py  logging_config.py
tests/: __init__.py
tests/integration/: test_core_integration.py
